k8s/apps/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: framm-web
  ports:
    - port: 80
      targetPort: 3000
